--- a/3S-project/3S_QuanLyDiemSinhVien.csproj
+++ b/3S-project/3S_QuanLyDiemSinhVien.csproj
@@ -331,6 +331,12 @@
     <Compile Include="GUI\FormGiangVien\FormXoaGV.designer.cs">
       <DependentUpon>FormXoaGV.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\FormGiangVien\QuanLyDiem_GiangVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormGiangVien\QuanLyDiem_GiangVien.Designer.cs">
+      <DependentUpon>QuanLyDiem_GiangVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -476,6 +482,9 @@
     <EmbeddedResource Include="GUI\FormAdmin\FormQuanLyLop\Xoasv.resx">
       <DependentUpon>Xoasv.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormAdmin\FormQuanLyTaiKhoan\PhanQuyen.resx">
+      <DependentUpon>PhanQuyen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormAdmin\FormQuanLyTaiKhoan\QuanLyTaiKhoan.resx">
       <DependentUpon>QuanLyTaiKhoan.cs</DependentUpon>
     </EmbeddedResource>
@@ -517,6 +526,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormGiangVien\FormXoaGV.resx">
       <DependentUpon>FormXoaGV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormGiangVien\QuanLyDiem_GiangVien.resx">
+      <DependentUpon>QuanLyDiem_GiangVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
